# CityBuilder

./: .clang-format  CMakeLists.txt  README.md  main.cc  main.cpp  vcpkg.json
_sprite_creation/: empty.piskel
api/: CMakeLists.txt
api/include/: resource_sprite.h  tilemap.h
api/include/ai/: npc.h  npc_behaviour_tree.h  npc_factory.h  npc_manager.h
api/include/buildings/: building.h  buildings_factory.h  buildings_manager.h  lumber_house.h  mine.h
api/include/graphics/: tilemap.h
api/include/motion/: AStar.h  motor.h  path.h
api/include/resources/: Stock.h  StockManager.h  prices.h  resources.h  ressource_manager.h  stock_manager.h
api/include/ressources/: ressource.h  ressource_manager.h
api/include/ui/: Stock.h  button.h  button_factory.h  clickable.h  cursor_indicator.h  fading_message.h  label_button.h  ui_manager.h
api/src/: resouce_manager.cc  resource_sprite.cc  tile.cc  tilemap.cc
api/src/ai/: npc.cc  npc_behaviour_tree.cc  npc_manager.cc
api/src/buildings/: building.cc  buildings_manager.cc  lumber_house.cc  mine.cc
api/src/graphics/: tilemap.cc
api/src/motion/: AStar.cc  path.cc
api/src/resources/: Stock.cc  StockManager.cc
api/src/ui/: Stock.cc  button.cc  clickable.cc  cursor_indicator.cc  fading_message.cc  ui_manager.cc
core/: CMakeLists.txt
core/include/: empty.h
core/include/ai/: bt_action.h  bt_composite.h  bt_node.h  bt_selector.h  bt_sequence.h
core/include/assets/: asset_manager.h
core/include/maths/: const.h  func.h  vec2f.h
core/src/: empty.cc
core/src/ai/: bt_composite.cc  bt_selector.cc  bt_sequence.cc
core/src/test/: test_angle.cc  test_vec2f.cc
core/test/: test_vec2.cc  test_vec2f.cc
core/test/maths/: angle.h  vec2.h  vec2f.h
game/: CMakeLists.txt
game/include/: game.h  resource_manager.h  resource_sprite.h  tile.h  tilemap.h
game/src/: game.cc  resource_sprite.cc  tile.cc  tilemap.cc
game/test/: test_asset_manager.cc
